grammar.js
    source_file: ($) => repeat($._statement),

    _statement: ($) => seq($.statement, $._semicolon),

    _one_or_more_statements: ($) =>
      seq(repeat($._statement), $.statement, optional($._semicolon)),

    block: ($) =>
      prec.right(seq('{', optional($._one_or_more_statements), '}')),

    open_statement: ($) => seq('open', optional('!'), $.module_expression),

    include_statement: ($) =>
      seq(
        'include',
        choice($._module_definition, parenthesize($._module_structure)),
      ),

    module_binding: ($) =>
      prec.left(
        seq(
          field('name', choice($.module_identifier, $.type_identifier)),
          optional(
            seq(
              ':',
              field(
                'signature',
                choice($.block, $.module_expression, $.functor),
              ),
            ),
          ),
          optional(
            seq(
              '=',
              optional('await'),
              field('definition', $._module_definition),
            ),
          ),
        ),
      ),

    module_declaration: ($) =>
      seq(
        'module',
        optional('rec'),
        optional('type'),
        sep1('and', $.module_binding),
      ),

    _module_structure: ($) =>
      seq($._module_definition, optional($.module_type_annotation)),

    _module_definition: ($) =>
      choice($.block, $.module_expression, $.functor, $.extension_expression),

    module_unpack: ($) =>
      seq(
        'unpack',
        '(',
        choice(
          seq(
            choice(
              $.value_identifier,
              $.value_identifier_path,
              $.member_expression,
            ),
            optional($.module_type_annotation),
          ),
          seq($.call_expression, optional($.module_type_annotation)),
          seq($.module_pack, optional($.module_type_annotation)),
          $.extension_expression,
        ),
        ')',
      ),

    functor: ($) =>
      seq(
        field('parameters', $.functor_parameters),
        optional(field('return_module_type', $.module_type_annotation)),
        '=>',
        field('body', $._module_definition),
      ),

    functor_parameters: ($) =>
      seq('(', optional(commaSep1t($.functor_parameter)), ')'),

    functor_parameter: ($) =>
      seq($.module_identifier, optional($.module_type_annotation)),

    module_type_annotation: ($) =>
      seq(':', choice($.module_expression, $.block)),

    external_declaration: ($) =>
      seq('external', $.value_identifier, $.type_annotation, '=', $.string),

    exception_declaration: ($) =>
      seq(
        'exception',
        $.variant_identifier,
        optional($.variant_parameters),
        optional(
          seq('=', choice($.variant_identifier, $.nested_variant_identifier)),
        ),
      ),

    type_declaration: ($) =>
      seq(
        optional('export'),
        'type',
        optional('rec'),
        sep1('and', $.type_binding),
      ),

    type_binding: ($) =>
      seq(
        field('name', choice($.type_identifier, $.type_identifier_path)),
        optional($.type_parameters),
        optional(
          choice(
            seq('=', $.extensible_type),
            seq(
              optional(seq('=', $._non_function_inline_type)),
              optional(
                seq(
                  choice('=', '+='),
                  optional('private'),
                  field('body', $._type),
                ),
              ),
              repeat($.type_constraint),
            ),
          ),
        ),
      ),

    type_annotation: ($) => seq(':', $._inline_type),

    _type: ($) =>
      choice($._inline_type, $.variant_type, $.record_type, $.as_aliasing_type),

    _inline_type: ($) => choice($._non_function_inline_type, $.function_type),

    _non_function_inline_type: ($) =>
      choice(
        $._type_identifier,
        $.tuple_type,
        $.polyvar_type,
        $.object_type,
        $.record_type,
        $.generic_type,
        $.unit_type,
        $.module_pack,
        $.unit,
        $.polymorphic_type,
        alias($._as_aliasing_non_function_inline_type, $.as_aliasing_type),
      ),

    variant_parameters: ($) => seq('(', commaSep1t($._type), ')'),

    polyvar_type: ($) =>
      prec.left(
        seq(
          choice('[', '[>', '[<'),
          optional('|'),
          barSep1($.polyvar_declaration),
          ']',
        ),
      ),

    polyvar_declaration: ($) =>
      prec.right(
        choice(
          seq($.polyvar_identifier, optional($.polyvar_parameters)),
          $._inline_type,
        ),
      ),

    polyvar_parameters: ($) => seq('(', commaSep1t($._type), ')'),

    object_type: ($) =>
      prec.left(
        seq(
          '{',
          choice(
            commaSep1t($._object_type_member),
            seq('.', commaSept($._object_type_member)),
            seq('..', commaSept($._object_type_member)),
          ),
          '}',
        ),
      ),

    _object_type_member: ($) =>
      choice(alias($.object_type_field, $.field), $.type_spread),

    generic_type: ($) => prec.left(seq($._type_identifier, $.type_arguments)),

    type_arguments: ($) => seq('<', commaSep1t($._type), '>'),

    function_type: ($) =>
      prec.left(seq($.function_type_parameters, '=>', $._type)),

    function_type_parameters: ($) =>
      choice($._non_function_inline_type, $._function_type_parameter_list),

    _function_type_parameter_list: ($) =>
      seq('(', commaSept(alias($.function_type_parameter, $.parameter)), ')'),

    let_declaration: ($) =>
      seq(choice('export', 'let'), optional('rec'), sep1('and', $.let_binding)),

    let_binding: ($) =>
      seq(
        field('pattern', $._pattern),
        choice(
          seq(
            $.type_annotation,
            optional(seq('=', field('body', $.expression))),
          ),
          seq('=', field('body', $.expression)),
        ),
      ),

    expression_statement: ($) => $.expression,

    value_identifier_path: ($) =>
      seq($.module_primary_expression, '.', $.value_identifier),

    function: ($) =>
      prec.left(
        seq(
          optional('async'),
          choice(
            field('parameter', $.value_identifier),
            $._definition_signature,
          ),
          '=>',
          field('body', $.expression),
        ),
      ),

    call_expression: ($) =>
      prec(
        'call',
        seq(
          field('function', $.primary_expression),
          field('arguments', alias($.call_arguments, $.arguments)),
        ),
      ),

    module_pack: ($) =>
      seq(
        'module',
        parenthesize(choice($._module_structure, $.type_identifier_path)),
      ),

    _definition_signature: ($) =>
      seq(
        field('parameters', $.formal_parameters),
        optional(
          field(
            'return_type',
            alias($._return_type_annotation, $.type_annotation),
          ),
        ),
      ),

    formal_parameters: ($) =>
      seq('(', optional(choice(commaSep1t($.parameter), $.uncurry)), ')'),

    parameter: ($) =>
      seq(
        optional($.uncurry),
        choice(
          seq($._pattern, optional($.type_annotation)),
          $.labeled_parameter,
          $.unit,
          $.abstract_type,
        ),
      ),

    labeled_parameter: ($) =>
      seq(
        '~',
        $.value_identifier,
        optional($.as_aliasing),
        optional(
          choice(
            seq(
              $.type_annotation,
              optional(
                field('default_value', $._labeled_parameter_default_value),
              ),
            ),
            seq(
              field('default_value', $._labeled_parameter_default_value),
              optional($.type_annotation),
            ),
          ),
        ),
      ),

    _labeled_parameter_default_value: ($) =>
      seq('=', choice('?', $.expression)),

    // This negative dynamic precedence ensures that during error recovery,
    // unfinished constructs are generally treated as literal expressions,
    // not patterns.
    _pattern: ($) =>
      prec.dynamic(
        -1,
        seq(
          choice(
            seq(optional('?'), $.value_identifier),
            $._literal_pattern,
            $._destructuring_pattern,
            $.polyvar_type_pattern,
            $.unit,
            $.module_pack,
            $.lazy_pattern,
            $.parenthesized_pattern,
            $.or_pattern,
            $.range_pattern,
            $.exception_pattern,
          ),
          optional($.as_aliasing),
        ),
      ),

    member_expression: ($) =>
      prec(
        'member',
        seq(
          field('record', $.primary_expression),
          '.',
          optional(
            seq(
              field(
                'module',
                seq(repeat(seq($.module_identifier, '.')), $.module_identifier),
              ),
              '.',
            ),
          ),
          field('property', alias($.value_identifier, $.property_identifier)),
        ),
      ),

    extension_expression: ($) =>
      prec.right(
        seq(
          repeat1('%'),
          $.extension_identifier,
          optional($._extension_expression_payload),
        ),
      ),

    _extension_expression_payload: ($) =>
      seq('(', choice($._one_or_more_statements, $.type_annotation), ')'),

    nested_variant_identifier: ($) =>
      seq($.module_primary_expression, '.', $.variant_identifier),

    _type_identifier: ($) => choice($.type_identifier, $.type_identifier_path),

    type_identifier_path: ($) =>
      seq($.module_primary_expression, '.', $.type_identifier),

    parenthesized_module_expression: ($) =>
      seq('(', $.module_expression, optional($.module_type_annotation), ')'),

    module_identifier_path: ($) =>
      path($.module_primary_expression, $.module_identifier),

    module_type_of: ($) =>
      prec.left(
        seq('module', 'type', 'of', choice($.module_expression, $.block)),
      ),

    _module_type_constraint_with: ($) =>
      prec.right(
        seq(
          'with',
          sep1(
            choice('and', 'with'),
            choice($.constrain_module, $.constrain_type),
          ),
        ),
      ),

    module_type_constraint: ($) =>
      prec.left(
        choice(
          seq($.module_expression, $._module_type_constraint_with),
          seq(
            '(',
            $.module_expression,
            $._module_type_constraint_with,
            ')',
            $._module_type_constraint_with,
          ),
        ),
      ),

    constrain_module: ($) =>
      seq(
        'module',
        $.module_primary_expression,
        choice('=', ':='),
        $.module_primary_expression,
      ),

    constrain_type: ($) =>
      seq('type', $._type, choice('=', ':='), optional('private'), $._type),

    functor_use: ($) =>
      seq($.module_primary_expression, alias($.functor_arguments, $.arguments)),

    variant_identifier: ($) => /[A-Z][a-zA-Z0-9_']*/,

    polyvar_identifier: ($) =>
      seq(
        '#',
        choice(
          /[a-zA-Z0-9_']+/,
          seq(optional('\\'), alias($.string, $.polyvar_string)),
        ),
      ),

    type_identifier: ($) =>
      choice($._identifier, /'[a-zA-Z0-9_']*/, $._escape_identifier),

    _identifier: (_) => /[a-z_][a-zA-Z0-9_']*/,

    value_identifier: ($) =>
      choice($._identifier, $._reserved_identifier, $._escape_identifier),

    _escape_identifier: ($) => token(seq('\\"', /[^"]+/, '"')),

    module_identifier: ($) => /[A-Z][a-zA-Z0-9_']*/,

    extension_identifier: ($) => /[a-zA-Z0-9_\.]+/,

    number: ($) => {
      // OCaml: https://github.com/tree-sitter/tree-sitter-ocaml/blob/f1106bf834703f1f2f795da1a3b5f8f40174ffcc/ocaml/grammar.js#L26
      const hex_literal = seq(
        optional(choice('-', '+')),
        /0[xX][0-9A-Fa-f][0-9A-Fa-f_]*(\.[0-9A-Fa-f_]*)?([pP][+\-]?[0-9][0-9_]*)?[g-zG-Z]?/,
      );

      const decimal_digits = /\d(_?\d)*/;
      const signed_integer = seq(optional(choice('-', '+')), decimal_digits);
      const exponent_part = seq(choice('e', 'E'), signed_integer);

      const binary_literal = seq(choice('0b', '0B'), /[0-1](_?[0-1])*/);

      const octal_literal = seq(choice('0o', '0O'), /[0-7](_?[0-7])*/);

      const bigint_literal = seq(
        optional(choice('-', '+')),
        choice(hex_literal, binary_literal, octal_literal, decimal_digits),
        'n',
      );

      const decimal_integer_literal = choice(
        repeat1('0'),
        seq(repeat('0'), /[1-9]/, optional(seq(optional('_'), decimal_digits))),
      );

      const decimal_literal = seq(
        optional(choice('-', '+')),
        choice(
          seq(
            decimal_integer_literal,
            '.',
            optional(decimal_digits),
            optional(exponent_part),
          ),
          seq('.', decimal_digits, optional(exponent_part)),
          seq(decimal_integer_literal, exponent_part),
          decimal_digits,
        ),
      );

      const int_32_64 = seq(
        optional(choice('-', '+')),
        choice(
          decimal_integer_literal,
          binary_literal,
          octal_literal,
          hex_literal,
        ),
        choice('L', 'l'),
      );

      return token(
        choice(
          hex_literal,
          decimal_literal,
          binary_literal,
          octal_literal,
          bigint_literal,
          int_32_64,
        ),
      );
    },

    unit: ($) => seq('(', ')'),
    unit_type: ($) => 'unit',

    string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            alias($.unescaped_double_string_fragment, $.string_fragment),
            $.escape_sequence,
          ),
        ),
        '"',
      ),

    // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
    // We give names to the token() constructs containing a regexp
    // so as to obtain a node in the CST.
    //
    uncurry: ($) => '.',

    _reserved_identifier: ($) => choice('async', 'unpack'),
  },
});

/**
 * Creates a rule that matches one or more rules separated by vertical bars.
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function barSep1(rule) {
  return seq(rule, repeat(seq('|', rule)));
}

/**
 * Creates a rule that matches one or more rules separated by commas.
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

/**
 * Creates a rule that matches two or more rules separated by commas.
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function commaSep2(rule) {
  return seq(rule, ',', commaSep1(rule));
}

/**
 * Creates a comma-separated list with at least one rule and an optional trailing comma.
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function commaSep1t(rule) {
  return seq(commaSep1(rule), optional(','));
}

/**
 * Creates a comma-separated list with at least two rules and an optional trailing comma.
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function commaSep2t(rule) {
  return seq(commaSep2(rule), optional(','));
}

/**
 * Creates an optional comma-separated list with an optional trailing comma.
 *
 * @param {Rule} rule
 *
 * @returns {ChoiceRule}
 */
function commaSept(rule) {
  return optional(commaSep1t(rule));
}

/**
 * Creates a rule that matches one or more rules separated by a delimiter.
 *
 * @param {string} delimiter
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function sep1(delimiter, rule) {
  return seq(rule, repeat(seq(delimiter, rule)));
}

/**
 * Creates a rule that matches a final rule with an optional dotted prefix.
 *
 * @param {Rule} prefix
 * @param {Rule} final
 *
 * @returns {ChoiceRule}
 */
function path(prefix, final) {
  return choice(final, seq(prefix, '.', final));
}

/**
 * Creates a rule enclosed in parentheses.
 *
 * @param {Rule} rule
 *
 * @returns {SeqRule}
 */
function parenthesize(rule) {
  return seq('(', rule, ')');
}
